--- a/templates/auth/forgotPassword.html
+++ b/templates/auth/forgotPassword.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Login | Chikolo</title>
+    <title>Login | FaSch</title>
     <link rel="apple-touch-icon" href="{% static 'images/ico/apple-icon-120.png' %}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i%7COpen+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/vendors.css' %}">
