--- a/templates/auth/setPassword.html
+++ b/templates/auth/setPassword.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Login | Chikolo</title>
+    <title>Set Password | FaSch</title>
     <link rel="apple-touch-icon" href="{% static 'images/ico/apple-icon-120.png' %}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i%7COpen+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/vendors.css' %}">
@@ -14,7 +14,6 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-menu.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/pages/login-register.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/forms/validation/form-validation.css' %}">
 </head>
 <body class="vertical-layout vertical-menu 1-column bg-lighten-2 menu-expanded blank-page blank-page" data-open="click"
@@ -35,12 +34,18 @@
                                         </div>
                                     </div>
                                     <h6 class="card-subtitle line-on-side text-muted text-center font-small-3 pt-2">
-                                        <span>Change Password Reset</span>
+                                        <span>Set Password</span>
                                     </h6>
+                                    <div class="alert alert-icon-left alert-info alert-dismissible mb-2" role="alert" id="notify" style="display: none;">
+                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                        <strong id="heading"></strong> <span id="msg"></span>
+                                    </div>
                                 </div>
                                 <div class="card-content">
                                     <div class="card-body pt-0">
-                                        <form class="form-horizontal">
+                                        <form class="form-horizontal" id="set_password">
                                             <div class="form-group ">
                                                 <label>Password
                                                     <span class="required">*</span>
@@ -60,14 +65,14 @@
                                                     <span class="required">*</span>
                                                 </label>
                                                 <div class="controls position-relative has-icon-left">
-                                                    <input type="password" name="password2" placeholder="Repeat Password" data-validation-match-match="password"
+                                                    <input type="password" name="password2" id="password2" placeholder="Repeat Password" data-validation-match-match="password"
                                                         class="form-control" required data-validation-required-message="Password is required">
                                                     <div class="form-control-position">
                                                         <i class="ft-lock primary"></i>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <button type="submit" class="btn btn-outline-primary btn-block"><i
+                                            <button type="submit" class="btn btn-outline-primary btn-block" id="submit"><i
                                                     class="ft-unlock"></i> Change Password</button>
                                         </form>
                                     </div>
@@ -83,13 +88,15 @@
     <script src="{% static 'vendors/js/forms/icheck/icheck.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/core/app-menu.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/core/app.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/scripts/customizer.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/scripts/forms/form-login-register.js' %}" type="text/javascript"></script>
     <script src="{% static 'vendors/js/forms/validation/jqBootstrapValidation.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/scripts/forms/validation/form-validation.js' %}" type="text/javascript"></script>
+    <!-- <script src="{% static 'js/scripts/forms/validation/form-validation.js' %}" type="text/javascript"></script> -->
     <script>
+        $("input,select,textarea").not("[type=submit]").jqBootstrapValidation();
         var csrftoken = '{{ csrf_token }}';
     </script>
+    <script src="{% static 'logic/routes.js' %}"></script>
+    <script src="{% static 'logic/auth/setPassword.js' %}" type="text/javascript"></script>
 </body>
 
 </html>
