--- a/templates/emailTemplates/newPassword.html
+++ b/templates/emailTemplates/newPassword.html
@@ -32,16 +32,18 @@
                                 </tr>
                                 <tr>
                                     <td style="padding:0 35px;">
-                                        <h1
+                                        <p style="color:#455056; font-size:15px;line-height:24px; margin:0;"
                                             style="color:#1e1e2d; font-weight:500; margin:0;font-size:32px;font-family:'Rubik',sans-serif;">
-                                            Hi {{ firstname }}, your account has been successfuly created on FaSch</h1>
-                                        <span
-                                            style="display:inline-block; vertical-align:middle; margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
+                                            Hi {{ firstname }}, you requested a password change on FaSch. </p>
                                         <p style="color:#455056; font-size:15px;line-height:24px; margin:0;">
-                                            Click the button below to activate your account. <b>The link expires in 30 minutes</b>
+                                            Click the button below to change your password. <b>The link expires in 30
+                                                minutes</b>
                                         </p>
                                         <a href="{{ absurl }}"
-                                            style="background:#008cff;text-decoration:none !important; font-weight:500; margin-top:35px; color:#fff;text-transform:uppercase; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px;">ACTIVATE ACCOUNT</a>
+                                            style="background:#008cff;text-decoration:none !important; font-weight:500; margin-top:15px; color:#fff;text-transform:uppercase; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px;">Change Password</a>
+                                        <p style="color:#455056; font-size:15px;line-height:24px; margin-top:10;">
+                                            If this was not you, consider changing you password from account settings.
+                                        </p>
                                     </td>
                                 </tr>
                                 <tr>
