--- a/templates/auth/forgotPassword.html
+++ b/templates/auth/forgotPassword.html
@@ -83,23 +83,73 @@
             var csrftoken = '{{ csrf_token }}';
             $("input,select,textarea").not("[type=submit]").jqBootstrapValidation();
             $('.email-inputmask').inputmask({
-                    mask: "*{1,20}[.*{1,20}][.*{1,20}][.*{1,20}]@*{1,20}[*{2,6}][*{1,2}].*{1,}[.*{2,6}][.*{1,2}]",
-                    greedy: false,
-                    onBeforePaste: function (pastedValue, opts) {
-                        pastedValue = pastedValue.toLowerCase();
-                        return pastedValue.replace("mailto:", "");
+                mask: "*{1,20}[.*{1,20}][.*{1,20}][.*{1,20}]@*{1,20}[*{2,6}][*{1,2}].*{1,}[.*{2,6}][.*{1,2}]",
+                greedy: false,
+                onBeforePaste: function (pastedValue, opts) {
+                    pastedValue = pastedValue.toLowerCase();
+                    return pastedValue.replace("mailto:", "");
+                },
+                definitions: {
+                    '*': {
+                        validator: "[0-9A-Za-z!#$%&'*+/=?^_`{|}~/-]",
+                        cardinality: 1,
+                        casing: "lower"
+                    }
+                }
+            });
+
+            const notify = document.getElementById('notify')
+            $('#request_password').submit(function (e) {
+                e.preventDefault();
+                document.getElementById("submit").disabled = true;
+                notify.style.display = "block";
+                $("#heading").html('Processing!');
+                $("#msg").html('Please Wait...');
+                $("#notify").removeClass("alert-success alert-warning alert-danger").addClass("alert-info");
+                let email = $('#email').val();
+                var payload = { email: email };
+                $.ajax({
+                    url: "{% url 'auth_forgot_password' %}",
+                    data: payload,
+                    type: "POST",
+                    dataType: "json",
+                    headers: {
+                        content_type: 'application/json',
+                        'X-CSRFToken': csrftoken
                     },
-                    definitions: {
-                        '*': {
-                            validator: "[0-9A-Za-z!#$%&'*+/=?^_`{|}~/-]",
-                            cardinality: 1,
-                            casing: "lower"
+                    success: function (data) {
+                        if (data) {
+                            var status = data.status
+                            var message = data.msg
+                            if (status === 200) {
+                                $("#heading").html('Success!');
+                                $("#msg").html(message);
+                                $("#notify").removeClass("alert-info alert-warning alert-danger").addClass("alert-success");
+                                setTimeout(function () {
+                                    window.location.href = "{% url 'auth_login' %}";
+                                }, 2500);
+
+                            }
+                            else if (status === 400) {
+                                $("#heading").html('Warning!');
+                                $("#msg").html(message);
+                                $("#notify").removeClass("alert-info alert-success alert-danger").addClass("alert-warning");
+                                document.getElementById("submit").disabled = false;
+                            }
                         }
+                    },
+                    error: function (data) {
+                        $("#heading").html('Warning!');
+                        $("#msg").html('Internal Server Error');
+                        $("#notify").removeClass("alert-info alert-warning alert-success").addClass("alert-danger");
+                        document.getElementById("submit").disabled = false;
                     }
                 });
+
+            }) 
         </script>
-        <script src="{% static 'logic/routes.js' %}"></script>
-        <script src="{% static 'logic/auth/requestPassword.js' %}" type="text/javascript"></script>
+        <!-- <script src="{% static 'logic/routes.js' %}"></script>
+        <script src="{% static 'logic/auth/requestPassword.js' %}" type="text/javascript"></script> -->
 </body>
 
 </html>
