--- a/templates/emailTemplates/verifyAccount.html
+++ b/templates/emailTemplates/verifyAccount.html
@@ -32,9 +32,9 @@
                                 </tr>
                                 <tr>
                                     <td style="padding:0 35px;">
-                                        <h1
-                                            style="color:#1e1e2d; font-weight:500; margin:0;font-size:32px;font-family:'Rubik',sans-serif;">
-                                            Hi {{ firstname }}, your account has been successfuly created on FaSch</h1>
+                                        <h3
+                                            style="color:#1e1e2d; font-weight:500; margin:0; font-family:'Rubik',sans-serif;">
+                                            Hi {{ firstname }}, your account has been successfuly created on FaSch, you can login with your username: <b>{{ username }}</b> or email <b>{{ email }}</b> upon setting a password.</h3>
                                         <span
                                             style="display:inline-block; vertical-align:middle; margin:29px 0 26px; border-bottom:1px solid #cecece; width:100px;"></span>
                                         <p style="color:#455056; font-size:15px;line-height:24px; margin:0;">
