--- a/templates/auth/index.html
+++ b/templates/auth/index.html
@@ -114,7 +114,7 @@
               var message = data.msg
               var destination = data.destination
               if (status === 200) {
-                $("#heading").html('AuthenticatedISAAC!');
+                $("#heading").html('Authenticated!');
                 $("#msg").html('Redirecting, Please Wait...');
                 $("#notify").removeClass("alert-info alert-warning alert-danger").addClass("alert-success");
                 setTimeout(function () {
